update config files

--- a/config/InfernalMobs.cfg
+++ b/config/InfernalMobs.cfg
@@ -1,29 +1,258 @@
 # Configuration file
 
 entitiesalwaysinfernal {
+    B:BabyHeatscarSpider=false
+    B:BlueSlime=false
+    B:EntityArmorCreeper=false
     B:EntityBabySkeleton=false
+    B:EntityBabySpider=false
+    B:EntityBasalz=false
+    B:EntityBlackberrySlime=false
+    B:EntityBlaze=false
+    B:EntityBlazeKnight=false
+    B:EntityBlindingEnderman=false
+    B:EntityBlitz=false
+    B:EntityBlizz=false
+    B:EntityBrownSpider=false
+    B:EntityBrownSpiderLarge=false
+    B:EntityBrownSpiderSmall=false
+    B:EntityBrutishPigZombie=false
+    B:EntityBrutishSkeleton=false
+    B:EntityBrutishZombie=false
+    B:EntityCaramelSlime=false
+    B:EntityCaveSpider=false
+    B:EntityCinderBlaze=false
     B:EntityConcussionCreeper=false
     B:EntityCreeper=false
+    B:EntityCursedEnderman=false
+    B:EntityDarkCreeper=false
+    B:EntityDarkling=false
+    B:EntityDeathCreeper=false
+    B:EntityDesertSpider=false
+    B:EntityDireWolf=false
+    B:EntityDirtCreeper=false
+    B:EntityDominationWitch=false
+    B:EntityDoomCreeper=false
+    B:EntityDrowningCreeper=false
+    B:EntityEarthElemental=false
+    B:EntityEnderCreeper=false
+    B:EntityEnderman=false
+    B:EntityEnderminy=false
+    B:EntityEvilWizard=false
+    B:EntityFallenKnight=false
+    B:EntityFallenMount=false
+    B:EntityFighterGhast=false
+    B:EntityFireCreeper=false
+    B:EntityFireElemental=false
+    B:EntityFireSkeleton=false
+    B:EntityFireZombie=false
+    B:EntityFishingPigZombie=false
+    B:EntityFishingZombie=false
+    B:EntityFlyingSpider=false
+    B:EntityGatlingSkeleton=false
+    B:EntityGhast=false
+    B:EntityGhostSpider=false
+    B:EntityGiantPigZombie=false
+    B:EntityGiantSkeleton=false
+    B:EntityGiantSpider=false
+    B:EntityGiantZombie=false
+    B:EntityGlowSlime=false
+    B:EntityGrapeSlime=false
+    B:EntityGravelCreeper=false
+    B:EntityGravityCreeper=false
+    B:EntityGuardian=false
+    B:EntityHellfireBlaze=false
+    B:EntityHellfish=false
+    B:EntityHellhound=false
+    B:EntityHungryPigZombie=false
+    B:EntityHungrySpider=false
+    B:EntityHungryZombie=false
+    B:EntityHusk=false
+    B:EntityIcyEnderman=false
+    B:EntityInfernoBlaze=false
+    B:EntityJumpingCreeper=false
+    B:EntityLavaMonster=false
+    B:EntityLemonSlime=false
+    B:EntityLightningCreeper=false
+    B:EntityLightningEnderman=false
+    B:EntityMagmaCube=false
+    B:EntityManaCreeper=false
+    B:EntityManaElemental=false
+    B:EntityMiniCreeper=false
+    B:EntityMiniEnderman=false
+    B:EntityMirageEnderman=false
     B:EntityMobEnderman=false
+    B:EntityMotherSpider=false
+    B:EntityNinjaSkeleton=false
     B:EntityNuclearMonster=false
+    B:EntityPaleSpider=false
+    B:EntityPigZombie=false
+    B:EntityPlaguePigZombie=false
+    B:EntityPlagueZombie=false
+    B:EntityPoisonSkeleton=false
+    B:EntityPoisonSpider=false
+    B:EntityRageWitch=false
+    B:EntityShadowsWitch=false
     B:EntitySkeleton=false
+    B:EntitySkull=false
+    B:EntitySlime=false
+    B:EntitySmallSpider=false
+    B:EntitySniperSkeleton=false
     B:EntitySpider=false
+    B:EntitySpitfireSkeleton=false
+    B:EntitySplittingCreeper=false
+    B:EntityStrawberrySlime=false
+    B:EntityStray=false
+    B:EntityThiefEnderman=false
+    B:EntityThiefSkeleton=false
+    B:EntityToughSpider=false
+    B:EntityUndeadWitch=false
+    B:EntityVampirePigZombie=false
+    B:EntityWatermelonSlime=false
+    B:EntityWebSpider=false
+    B:EntityWildfireBlaze=false
+    B:EntityWildsWitch=false
+    B:EntityWindWitch=false
     B:EntityWitch=false
+    B:EntityWitchSpider=false
     B:EntityWitherCat=false
+    B:EntityWitherSkeleton=false
     B:EntityWitherWitch=false
+    B:EntityZoglin=false
     B:EntityZombie=false
+    B:EntityZombiePiglin=false
+    B:EntityZombieVillager=false
+    B:Entity_SpecialBlaze=false
+    B:Entity_SpecialCaveSpider=false
+    B:Entity_SpecialCreeper=false
+    B:Entity_SpecialEnderman=false
+    B:Entity_SpecialGhast=false
+    B:Entity_SpecialPigZombie=false
+    B:Entity_SpecialSkeleton=false
+    B:Entity_SpecialSlime=false
+    B:Entity_SpecialSpider=false
+    B:Entity_SpecialWitch=false
+    B:Entity_SpecialZombie=false
+    B:HeatscarSpider=false
+    B:NitroCreeper=false
 }
 
 
 entitybasehealth {
+    D:BabyHeatscarSpider=16.0
+    D:BlueSlime=28.0
+    D:EntityArmorCreeper=31.0
     D:EntityBabySkeleton=30.0
+    D:EntityBabySpider=10.0
+    D:EntityBasalz=20.0
+    D:EntityBlaze=20.0
+    D:EntityBlindingEnderman=40.0
+    D:EntityBlitz=20.0
+    D:EntityBlizz=20.0
+    D:EntityBrownSpider=16.799999237060547
+    D:EntityBrownSpiderLarge=62.0
+    D:EntityBrownSpiderSmall=6.0
+    D:EntityBrutishPigZombie=64.0
+    D:EntityBrutishSkeleton=40.0
+    D:EntityBrutishZombie=88.0
     D:EntityConcussionCreeper=400.0
+    D:EntityConflagrationBlaze=60.0
     D:EntityCreeper=20.0
+    D:EntityCursedEnderman=60.0
+    D:EntityDarkCreeper=20.0
+    D:EntityDarkling=7.0
+    D:EntityDeathCreeper=20.0
+    D:EntityDesertSpider=44.0
+    D:EntityDireWolf=20.0
+    D:EntityDirtCreeper=88.0
+    D:EntityDominationWitch=58.0
+    D:EntityDoomCreeper=20.0
+    D:EntityDrowningCreeper=40.0
+    D:EntityEarthElemental=28.0
+    D:EntityEnderCreeper=88.0
+    D:EntityEnderminy=80.0
+    D:EntityEvilWizard=30.0
+    D:EntityFallenKnight=80.0
+    D:EntityFallenMount=30.0
+    D:EntityFireCreeper=20.0
+    D:EntityFireElemental=15.0
+    D:EntityFireSkeleton=44.0
+    D:EntityFireZombie=20.0
+    D:EntityFishingPigZombie=264.0
+    D:EntityFishingZombie=40.0
+    D:EntityFlyingSpider=1902.0
+    D:EntityGatlingSkeleton=40.0
+    D:EntityGhast=10.0
+    D:EntityGhostSpider=16.0
+    D:EntityGiantPigZombie=64.0
+    D:EntityGiantSkeleton=40.0
+    D:EntityGiantSpider=32.0
+    D:EntityGiantZombie=40.0
+    D:EntityGlowSlime=10.0
+    D:EntityGravelCreeper=20.0
+    D:EntityGravityCreeper=88.0
+    D:EntityHellfish=12.5
+    D:EntityHellhound=20.0
+    D:EntityHungryPigZombie=70.0
+    D:EntityHungrySpider=44.0
+    D:EntityHungryZombie=50.0
+    D:EntityHusk=20.0
+    D:EntityIcyEnderman=88.0
+    D:EntityJumpingCreeper=20.0
+    D:EntityLavaMonster=24.0
+    D:EntityLightningCreeper=21.0
+    D:EntityLightningEnderman=40.0
+    D:EntityMagmaCube=4.0
+    D:EntityManaCreeper=20.0
+    D:EntityManaElemental=44.0
+    D:EntityMiniCreeper=18.0
+    D:EntityMiniEnderman=40.0
+    D:EntityMiniGhast=88.0
+    D:EntityMirageEnderman=60.0
     D:EntityMobEnderman=60.0
+    D:EntityMotherSpider=32.0
+    D:EntityNinjaSkeleton=20.0
     D:EntityNuclearMonster=60.0
+    D:EntityPaleSpider=36.0
+    D:EntityPigZombie=20.0
+    D:EntityPlaguePigZombie=60.0
+    D:EntityPlagueZombie=44.0
+    D:EntityPoisonSkeleton=44.0
+    D:EntityPoisonSpider=16.0
+    D:EntityRageWitch=62.0
     D:EntitySkeleton=20.0
+    D:EntitySkull=10.0
+    D:EntitySlime=1.0
+    D:EntitySmallSpider=288.0
+    D:EntitySniperSkeleton=44.0
     D:EntitySpider=288.0
+    D:EntitySpitfireSkeleton=180.0
+    D:EntitySplittingCreeper=88.0
+    D:EntityThiefSkeleton=21.0
+    D:EntityToughSpider=304.0
+    D:EntityUndeadWitch=58.0
+    D:EntityVampirePigZombie=60.0
+    D:EntityWebSpider=44.0
+    D:EntityWildsWitch=26.0
+    D:EntityWindWitch=26.0
+    D:EntityWitch=26.0
+    D:EntityWitchSpider=1728.0
+    D:EntityWitherCat=12.0
+    D:EntityWitherWitch=30.0
     D:EntityZombie=20.0
+    D:EntityZombiePiglin=20.0
+    D:Entity_SpecialBlaze=44.0
+    D:Entity_SpecialCreeper=20.0
+    D:Entity_SpecialEnderman=40.0
+    D:Entity_SpecialGhast=88.0
+    D:Entity_SpecialPigZombie=44.0
+    D:Entity_SpecialSkeleton=88.0
+    D:Entity_SpecialSlime=1.0
+    D:Entity_SpecialSpider=17.0
+    D:Entity_SpecialWitch=58.0
+    D:Entity_SpecialZombie=264.0
+    D:HeatscarSpider=112.0
+    D:NitroCreeper=20.0
 }
 
 
@@ -57,52 +286,155 @@ general {
     B:"MM_Weakness enabled"=true
     B:"MM_Webber enabled"=true
     B:"MM_Wither enabled"=true
-
-    # Disables the ingame Health and Name overlay
     B:disableGUIoverlay=false
-
-    # List of equally likely to drop Items for Elites, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsElite=iron_shovel,iron_pickaxe,iron_axe,iron_sword,iron_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,iron_helmet,iron_chestplate,iron_leggings,iron_boots,cookie-0-6
-
-    # List of equally likely to drop Items for Infernals, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsInfernal=diamond-0-3,diamond_sword,diamond_shovel,diamond_pickaxe,diamond_axe,diamond_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,diamond_helmet,diamond_chestplate,diamond_leggings,diamond_boots,ender_pearl,enchanted_book
-
-    # List of equally likely to drop Items for Ultras, seperated by commas, syntax: ID-meta-stackSize-stackSizeRandomizer, everything but ID is optional, see changelog
     S:droppedItemIDsUltra=bow,iron_hoe,chainmail_helmet,chainmail_chestplate,chainmail_leggings,chainmail_boots,iron_helmet,iron_chestplate,iron_leggings,iron_boots,golden_helmet,golden_chestplate,golden_leggings,golden_boots,golden_apple,blaze_powder-0-3,enchanted_book
-
-    # One in THIS many Mobs will become atleast rare
     I:eliteRarity=15
-
-    # One in THIS many already ultra Mobs will become infernal
     I:infernoRarity=7
-
-    # highest amount of damage an Infernal Mob or reflecting Mod will do in a single strike
     D:maxOneShotDamage=10.0
     D:mobFarmDamageThreshold=150.0
-
-    # Multiplier applied ontop of all of the modified Mobs health
     S:mobHealthFactor=1.0
-
-    # One in THIS many already rare Mobs will become atleast ultra
     I:ultraRarity=7
-
-    # Use Entity class names instead of ingame Entity names for the config
     B:useSimpleEntityClassnames=true
 }
 
 
 permittedentities {
+    B:BabyHeatscarSpider=true
+    B:BlueSlime=true
+    B:EntityArmorCreeper=true
     B:EntityBabySkeleton=true
+    B:EntityBabySpider=true
+    B:EntityBasalz=true
+    B:EntityBlackberrySlime=true
+    B:EntityBlaze=true
+    B:EntityBlazeKnight=true
+    B:EntityBlindingEnderman=true
+    B:EntityBlitz=true
+    B:EntityBlizz=true
+    B:EntityBrownSpider=true
+    B:EntityBrownSpiderLarge=true
+    B:EntityBrownSpiderSmall=true
+    B:EntityBrutishPigZombie=true
+    B:EntityBrutishSkeleton=true
+    B:EntityBrutishZombie=true
+    B:EntityCaramelSlime=true
+    B:EntityCaveSpider=true
+    B:EntityCinderBlaze=true
     B:EntityConcussionCreeper=true
     B:EntityCreeper=true
+    B:EntityCursedEnderman=true
+    B:EntityDarkCreeper=true
+    B:EntityDarkling=true
+    B:EntityDeathCreeper=true
+    B:EntityDesertSpider=true
+    B:EntityDireWolf=true
+    B:EntityDirtCreeper=true
+    B:EntityDominationWitch=true
+    B:EntityDoomCreeper=true
+    B:EntityDrowningCreeper=true
+    B:EntityEarthElemental=true
+    B:EntityEnderCreeper=true
+    B:EntityEnderman=true
+    B:EntityEnderminy=true
+    B:EntityEvilWizard=true
+    B:EntityFallenKnight=true
+    B:EntityFallenMount=true
+    B:EntityFighterGhast=true
+    B:EntityFireCreeper=true
+    B:EntityFireElemental=true
+    B:EntityFireSkeleton=true
+    B:EntityFireZombie=true
+    B:EntityFishingPigZombie=true
+    B:EntityFishingZombie=true
+    B:EntityFlyingSpider=true
+    B:EntityGatlingSkeleton=true
+    B:EntityGhast=true
+    B:EntityGhostSpider=true
+    B:EntityGiantPigZombie=true
+    B:EntityGiantSkeleton=true
+    B:EntityGiantSpider=true
+    B:EntityGiantZombie=true
+    B:EntityGlowSlime=true
+    B:EntityGrapeSlime=true
+    B:EntityGravelCreeper=true
+    B:EntityGravityCreeper=true
+    B:EntityGuardian=true
+    B:EntityHellfireBlaze=true
+    B:EntityHellfish=true
+    B:EntityHellhound=true
+    B:EntityHungryPigZombie=true
+    B:EntityHungrySpider=true
+    B:EntityHungryZombie=true
+    B:EntityHusk=true
+    B:EntityIcyEnderman=true
+    B:EntityInfernoBlaze=true
+    B:EntityJumpingCreeper=true
+    B:EntityLavaMonster=true
+    B:EntityLemonSlime=true
+    B:EntityLightningCreeper=true
+    B:EntityLightningEnderman=true
+    B:EntityMagmaCube=true
+    B:EntityManaCreeper=true
+    B:EntityManaElemental=true
+    B:EntityMiniCreeper=true
+    B:EntityMiniEnderman=true
+    B:EntityMirageEnderman=true
     B:EntityMobEnderman=true
+    B:EntityMotherSpider=true
+    B:EntityNinjaSkeleton=true
     B:EntityNuclearMonster=true
+    B:EntityPaleSpider=true
+    B:EntityPigZombie=true
+    B:EntityPlaguePigZombie=true
+    B:EntityPlagueZombie=true
+    B:EntityPoisonSkeleton=true
+    B:EntityPoisonSpider=true
+    B:EntityRageWitch=true
+    B:EntityShadowsWitch=true
     B:EntitySkeleton=true
+    B:EntitySkull=true
+    B:EntitySlime=true
+    B:EntitySmallSpider=true
+    B:EntitySniperSkeleton=true
     B:EntitySpider=true
+    B:EntitySpitfireSkeleton=true
+    B:EntitySplittingCreeper=true
+    B:EntityStrawberrySlime=true
+    B:EntityStray=true
+    B:EntityThiefEnderman=true
+    B:EntityThiefSkeleton=true
+    B:EntityToughSpider=true
+    B:EntityUndeadWitch=true
+    B:EntityVampirePigZombie=true
+    B:EntityWatermelonSlime=true
+    B:EntityWebSpider=true
+    B:EntityWildfireBlaze=true
+    B:EntityWildsWitch=true
+    B:EntityWindWitch=true
     B:EntityWitch=true
+    B:EntityWitchSpider=true
     B:EntityWitherCat=true
+    B:EntityWitherSkeleton=true
     B:EntityWitherWitch=true
+    B:EntityZoglin=true
     B:EntityZombie=true
+    B:EntityZombiePiglin=true
+    B:EntityZombieVillager=true
+    B:Entity_SpecialBlaze=true
+    B:Entity_SpecialCaveSpider=true
+    B:Entity_SpecialCreeper=true
+    B:Entity_SpecialEnderman=true
+    B:Entity_SpecialGhast=true
+    B:Entity_SpecialPigZombie=true
+    B:Entity_SpecialSkeleton=true
+    B:Entity_SpecialSlime=true
+    B:Entity_SpecialSpider=true
+    B:Entity_SpecialWitch=true
+    B:Entity_SpecialZombie=true
+    B:HeatscarSpider=true
+    B:NitroCreeper=true
 }
 
 
