--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -47,6 +47,11 @@ modules {
     B:"Forestry:power"=true
     B:"Forestry:sapling"=true
     B:FruitPressExtras=true
+    B:IC2Crops=true
+    B:"IC2Crops:cropName"=true
+    B:"IC2Crops:cropStats"=true
+    B:"IC2Crops:envInfo"=true
+    B:"IC2Crops:plantInfo"=true
     B:IFluidHandler=true
     B:MFR=true
     B:"Magical Crops"=true
@@ -65,11 +70,16 @@ modules {
     B:"Railcraft:locomotives"=true
     B:"Railcraft:multiblocks"=true
     B:"Railcraft:tanks"=true
+    B:"Railcraft:waterTankRate"=true
     B:"TE Augments"=true
     B:bc.tankamount=true
     B:bc.tanktype=true
     B:bca.duster.progress.graphical=true
     B:bca.duster.progress.textual=false
+    B:bm.bloodAltar=true
+    B:bm.chemistrySet=true
+    B:bm.ritualController=true
+    B:bm.teleposer=true
     B:computronics.enableDriveState=true
     B:computronics.enableLampColor=true
     B:computronics.enableOCAddress=true
@@ -80,6 +90,7 @@ modules {
     B:extrautilities.fluidamount=true
     B:facades.hidden=true
     B:general.showcrop=true
+    B:general.showents=true
     B:general.showhp=true
     B:harvestability.currentlyharvestable=true
     B:harvestability.currentlyharvestable.sneakingonly=false
@@ -119,6 +130,7 @@ modules {
     B:openblocks.fluidamount=true
     B:pr.showdata=true
     B:pr.showio=true
+    B:pr.showsignal=true
     B:railcraft.fluidamount=true
     B:tcon.basin=true
     B:tcon.castingchannel=true
@@ -140,6 +152,7 @@ modules {
     B:vanilla.leverstate=true
     B:vanilla.redstone=true
     B:vanilla.repeater=true
+    B:vanilla.show_invisible_players=true
     B:vanilla.silverfish=true
     B:vanilla.spawntype=true
 }
@@ -172,6 +185,11 @@ server_forcing {
     B:"Forestry:power"=false
     B:"Forestry:sapling"=false
     B:FruitPressExtras=false
+    B:IC2Crops=false
+    B:"IC2Crops:cropName"=false
+    B:"IC2Crops:cropStats"=false
+    B:"IC2Crops:envInfo"=false
+    B:"IC2Crops:plantInfo"=false
     B:IFluidHandler=false
     B:MFR=false
     B:"Magical Crops"=false
@@ -190,11 +208,16 @@ server_forcing {
     B:"Railcraft:locomotives"=false
     B:"Railcraft:multiblocks"=false
     B:"Railcraft:tanks"=false
+    B:"Railcraft:waterTankRate"=false
     B:"TE Augments"=false
     B:bc.tankamount=false
     B:bc.tanktype=false
     B:bca.duster.progress.graphical=false
     B:bca.duster.progress.textual=false
+    B:bm.bloodAltar=false
+    B:bm.chemistrySet=false
+    B:bm.ritualController=false
+    B:bm.teleposer=false
     B:computronics.enableDriveState=false
     B:computronics.enableLampColor=false
     B:computronics.enableOCAddress=false
@@ -205,6 +228,7 @@ server_forcing {
     B:extrautilities.fluidamount=false
     B:facades.hidden=false
     B:general.showcrop=false
+    B:general.showents=false
     B:general.showhp=false
     B:harvestability.currentlyharvestable=false
     B:harvestability.currentlyharvestable.sneakingonly=false
@@ -244,6 +268,7 @@ server_forcing {
     B:openblocks.fluidamount=false
     B:pr.showdata=false
     B:pr.showio=false
+    B:pr.showsignal=false
     B:railcraft.fluidamount=false
     B:tcon.basin=false
     B:tcon.castingchannel=false
@@ -265,6 +290,7 @@ server_forcing {
     B:vanilla.leverstate=false
     B:vanilla.redstone=false
     B:vanilla.repeater=false
+    B:vanilla.show_invisible_players=false
     B:vanilla.silverfish=false
     B:vanilla.spawntype=false
 }
