--- a/config/archaicfix.cfg
+++ b/config/archaicfix.cfg
@@ -87,7 +87,7 @@ general {
     B:increaseBlockUpdateLimit=true
 
     # Increase the amount of armor mobs wear on average. From TMCW. [default: false]
-    B:increaseMobArmor=false
+    B:increaseMobArmor=true
 
     # Reduce lag caused by item entities [default: true]
     B:itemLagReduction=true
@@ -129,7 +129,7 @@ general {
     B:preventEntitySuffocationWorldgen=false
 
     # Increase the maximum render distance if OptiFine and FastCraft are not installed. [default: false]
-    B:raiseMaxRenderDistance=false
+    B:raiseMaxRenderDistance=true
 
     # Remove JourneyMap debug feature. [default: false]
     B:removeJourneymapDebug=false
