--- a/config/bugtorch/mixins.cfg
+++ b/config/bugtorch/mixins.cfg
@@ -20,7 +20,9 @@
     # Stops Redstone Torches from causing a memory leak by making them use a weak hash map to store burnt out torches.
     # Fixes MC-101233 [default: true]
     B:fixRedstoneTorchMemoryLeak=true
-    B:throwEnderPearlsInCrativeMode=true
+
+    #  [default: true]
+    B:fixShearedBlocksDropExtraItems=true
 
     # Ender Pearls can be thrown in creative mode.
     # From MC 1.9, fixes MC-438 [default: true]
@@ -32,8 +34,6 @@
     # Makes the anvil sound type step a valid sound
     # Also prevents log errors when walking on anvils. [default: true]
     B:fixAnvilSoundTypeStepSound=true
-
-    # Makes Dark Oak trees check if replacement is allowed before putting down logs. [default: true]
     B:fixDarkOakRemovingBlocks=true
 
     # Fixes rendering issues caused by enchantments changing glBlendFunc and never reverting it. [default: true]
@@ -46,14 +46,10 @@
     # Lava will only hiss when mixing with water.
     # From MC 1.8, fixes MC-32301 [default: true]
     B:fixLavaHissOnAirReplace=true
-
-    # Fixes Leads breaking when placed on some modded fences. [default: true]
     B:fixLeadsBreakingOnSomeFenceInstances=true
-
-    # Stops vanilla and some modded leaves from decaying when part of some larger naturally occurring trees. [default: true]
     B:fixLeafDecayCheckRange=true
 
-    # Fixes edge case bugs when shift clicking item stacks.
+    # Fixes edge case bugs when shift clicking item stacks
     # An alternate version is used if CoFHCore is installed to fix dupes and item deletion it introduces. [default: true]
     B:fixMergeItemStack=true
 
@@ -65,7 +61,6 @@
 
     # Fixes particle depth being incorrectly calculated. [default: true]
     B:fixParticleDepthSorting=true
-    B:fixShearedBlocksDropExtraItems=true
 
     # Shearing tall grass will not give drops in addition to itself. [default: true]
     B:fixShearedGrassDropDupe=true
@@ -86,8 +81,9 @@
     # From MC 1.8, fixes MC-31081 [default: true]
     B:fixStoneMonsterEggDoubleSpawns=true
 
-    # Makes structure component filling also replace blocks flagged as replaceable and not partially trees.
-    # Mostly prevents tall grass and flowers from embedding in structure foundations and keeps trees from having random holes. [default: true]
+    # Makes structure component downfilling also replace blocks flagged as replaceable.
+    # Mostly prevents tall grass and flowers from embedding in structure foundations. [default: true]
+    B:fixStructureComponentDownfillReplacement=true
     B:fixStructureComponentFillReplacement=true
 
     # Village paths will not have flowers or grass on top of them.
@@ -168,14 +164,10 @@
 tweaks {
     # Makes Enchantment Tables emit particles for any block with enchantment power. [default: true]
     B:enchantmentParticlesForPowerAboveZero=true
-
-    # Makes getTopSolidOrLiquidBlock treat logs as non-solid.
-    # Should prevent structures and from generating in trees among other issues. [default: true]
     B:excludeLogsFromTopSolidOrLiquidBlock=true
 
     # Farmland can use hydroponics. [default: false]
     B:farmlandHydroponics=false
-    B:farmlandImprovements=false
 
     # New side textures for both wet and dry farmland. [default: false]
     B:farmlandNewTextures=false
@@ -235,7 +227,7 @@ tweaks {
     # Set to 0 to disable. [range: 0.0 ~ 1.0, default: 0.0]
     S:scaledLavaDamageMaxHealthMult=0.0
 
-    # Amount of flat player health to remove each poison effect tick.
+    # Portion of max player health to remove each poison effect tick.
     # Set to 0 to disable. [range: 0.0 ~ 20000.0, default: 0.0]
     S:scaledPoisonDamageMaxHealthFlat=0.0
 
@@ -251,7 +243,7 @@ tweaks {
     # Set to 0 to disable. [range: 0.0 ~ 1.0, default: 0.0]
     S:scaledStarvationDamageMaxHealthMult=0.0
 
-    # Amount of flat player health to remove each suffocation tick.
+    # Portion of max player health to remove each suffocation tick.
     # Set to 0 to disable. [range: 0.0 ~ 20000.0, default: 0.0]
     S:scaledSuffocationDamageMaxHealthFlat=0.0
 
@@ -259,15 +251,13 @@ tweaks {
     # Set to 0 to disable. [range: 0.0 ~ 1.0, default: 0.0]
     S:scaledSuffocationDamageMaxHealthMult=0.0
 
-    # Amount of flat player health to remove each wither effect tick.
+    # Portion of max player health to remove each wither effect tick.
     # Set to 0 to disable. [range: 0.0 ~ 20000.0, default: 0.0]
     S:scaledWitherDamageMaxHealthFlat=0.0
 
     # Portion of max player health to remove each wither effect tick.
     # Set to 0 to disable. [range: 0.0 ~ 1.0, default: 0.0]
     S:scaledWitherDamageMaxHealthMult=0.0
-
-    # Allows Leather Armor to be dyed using any properly tagged dye. [default: true]
     B:useAnyDyeOnLeatherArmor=true
 }
 
