--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -178,6 +178,7 @@ Whitelist {
     B:elementium.molten=true
     B:emerald.liquid=true
     B:ender=true
+    B:ender_distillation=true
     B:endergoo=true
     B:enderium.molten=true
     B:energetic.alloy.molten=true
@@ -549,6 +550,7 @@ Whitelist {
     B:teslatite.liquid=true
     B:tin.molten=true
     B:tungsten.molten=true
+    B:vapor_of_levity=true
     B:voidmetal.molten=true
     B:vulcanite.molten=true
     B:vyroxeres.molten=true
