--- a/config/neodymium.cfg
+++ b/config/neodymium.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.3.3-unofficial
+~CONFIG_VERSION: 0.2.5
 
 _general {
     # Set this to false to fully disable the mod. [default: true]
@@ -8,8 +8,6 @@ _general {
 
     # Apply changes made in the config file immediately without having to manually reload the renderer. Off by default because it could potentially cause poor performance on certain platforms. [default: false]
     B:hotswap=false
-
-    # Set this to false to disable update checking. [default: true]
     B:updateChecker=false
 }
 
@@ -52,12 +50,9 @@ misc {
 
 
 render {
+    # VRAM buffer size (MB). 512 seems to be a good value on Normal render distance. Increase this if you encounter warnings about the VRAM getting full. Does not affect RAM usage. [range: 1 ~ 2147483647, default: 512]
     I:VRAMSize=512
-
-    # The size of the allocation chunks for opaque geometry (in Megabytes). Requires game restart to apply. [range: 16 ~ 1024, default: 256]
     I:bufferSizePass0=256
-
-    # The size of the allocation chunks for transparent geometry (in Megabytes). Requires game restart to apply. [range: 16 ~ 1024, default: 64]
     I:bufferSizePass1=64
 
     # Don't submit faces for rendering if they are facing away from the camera. Reduces GPU workload at the cost of increasing driver overhead. This will improve the framerate most of the time, but may reduce it if you are not fillrate-limited (such as when playing on a small resolution). [default: true]
@@ -68,9 +63,9 @@ render {
 
     # Do fog occlusion even if fog is disabled. [default: false]
     B:fogOcclusionWithoutFog=false
-
-    # Chunks further away than this distance (in chunks) will not have unaligned polygons such as tall grass rendered. [range: 0 ~ 2147483647, default: 2147483647]
     I:maxUnalignedPolygonDistance=2147483647
+
+    # Chunks further away than this distance (in chunks) will not have unaligned quads such as tall grass rendered. [range: 0 ~ 2147483647, default: 2147483647]
     I:maxUnalignedQuadDistance=2147483647
 
     # Render fog? Slightly reduces framerate. `auto` means the OpenGL setting will be respected (as set by mods like OptiFine).
