--- a/config/wailaplugins.cfg
+++ b/config/wailaplugins.cfg
@@ -23,6 +23,7 @@ plugins {
     B:DSU=true
     B:"Extra Utilities"=true
     B:Forestry=true
+    B:IC2Crops=true
     B:IFluidHandler=true
     B:MFR=true
     B:"Magical Crops"=true
