--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -53,6 +53,9 @@ clientsettings {
     B:createBridgeInAirIfObstructed=false
     I:demonGridSpaceLimit=100
     I:demonHoardLimit=100
+    I:"dimension blacklist for the demon portal activation" <
+        0
+     >
     B:tunnelIfObstructed=false
 }
 
@@ -435,6 +438,7 @@ orecrushing {
         AWWayofTime:AlchemicalWizardrybloodRune:3
         AWWayofTime:AlchemicalWizardrybloodRune:4
         AWWayofTime:AlchemicalWizardrybloodRune:5
+        AWWayofTime:AlchemicalWizardrybloodRune:6
      >
     S:fourthTier <
         AWWayofTime:AlchemicalWizardrybloodRune:0
@@ -447,6 +451,7 @@ orecrushing {
         AWWayofTime:AlchemicalWizardrybloodRune:3
         AWWayofTime:AlchemicalWizardrybloodRune:4
         AWWayofTime:AlchemicalWizardrybloodRune:5
+        AWWayofTime:AlchemicalWizardrybloodRune:6
      >
     S:secondTier <
         AWWayofTime:AlchemicalWizardrybloodRune:0
@@ -459,6 +464,7 @@ orecrushing {
         AWWayofTime:AlchemicalWizardrybloodRune:3
         AWWayofTime:AlchemicalWizardrybloodRune:4
         AWWayofTime:AlchemicalWizardrybloodRune:5
+        AWWayofTime:AlchemicalWizardrybloodRune:6
      >
     S:sixthTier <
         AWWayofTime:AlchemicalWizardrybloodRune:0
@@ -471,6 +477,7 @@ orecrushing {
         AWWayofTime:AlchemicalWizardrybloodRune:3
         AWWayofTime:AlchemicalWizardrybloodRune:4
         AWWayofTime:AlchemicalWizardrybloodRune:5
+        AWWayofTime:AlchemicalWizardrybloodRune:6
      >
     S:specialBlocks <
         minecraft:stonebrick:0
@@ -492,6 +499,7 @@ orecrushing {
         AWWayofTime:AlchemicalWizardrybloodRune:3
         AWWayofTime:AlchemicalWizardrybloodRune:4
         AWWayofTime:AlchemicalWizardrybloodRune:5
+        AWWayofTime:AlchemicalWizardrybloodRune:6
      >
 }
 
@@ -499,8 +507,10 @@ orecrushing {
 sacrifice {
     I:"LP gained per HP from sacrifice"=50
     D:"LP per (self-)sacrifice with incense"=100.0
+    I:"LP per sacrifice"=500
     I:"LP per sacrifice with Well of Suffering ritual"=10
     I:"LP per self-sacrifice"=200
+    I:"LP per self-sacrifice (when Soul Fray potion is active)"=20
     I:"LP per self-sacrifice with Ritual of Feathered Knife"=100
 
     "custom values" {
