--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -40,6 +40,13 @@ general {
     # Set this to false to disable the Fallen Kanade flower (gives Regeneration). This config option is here for those using Blood Magic. Note: Turning this off will not remove ones already in the world, it'll simply prevent the crafting.
     B:fallenKanade.enabled=true
 
+    # Set this to true to enable the fancy skybox in custom dimension. (Does not require Garden of Glass loaded to use, needs 'fancySkybox.enable' to be true as well)
+    B:fancySkybox.customDim=false
+
+    # The ID of the dimension to use
+    I:fancySkybox.customDimID <
+     >
+
     # Set this to false to disable the fancy skybox in Garden of Glass.
     B:fancySkybox.enable=true
 
@@ -94,6 +101,9 @@ general {
     # Set this to true if you are the chosen one. For lovers of glitch art and just general mad people.
     B:matrixMode.enabled=false
 
+    # Mobs cannot Spawn on Blocks
+    B:noMobSpawnOnBlocks=true
+
     # The amount of time it takes a Passive flower to decay and turn into a dead bush. Defaults to 72000, 60 minutes. Setting this to -1 disables the feature altogether.
     I:passiveDecay.time=72000
 
@@ -105,6 +115,9 @@ general {
 
     # Set this to true to use Shift instead of Ctrl for the inventory lexica botania quick lookup feature.
     B:quickLookup.useShift=false
+
+    # Enables all built-in recipes. This can be false for expert modpacks that wish to supply their own.
+    B:recipes.enabled=true
 
     # Set this to false to disable the references in the flower tooltips. (You monster D:)
     B:references.enabled=true
@@ -126,8 +139,6 @@ general {
 
     # Do not ever touch this value if not asked to. Possible symptoms of doing so include your head turning backwards, the appearance of Titans near the walls or you being trapped in a game of Sword Art Online.
     I:spreader.posShift=1
-
-    # How many ticks into the future will mana spreaders attempt to predict where mana bursts go? Setting this lower will improve spreader performance, but will cause them to not fire at targets that are too far away.
     I:spreader.traceTime=400
 
     # Set this to false to disable Thaumcraft Infusion Stabilizing in botania blocks
@@ -135,8 +146,6 @@ general {
 
     # Set this to false to always display all particles regardless of the "Particles" setting in the Vanilla options menu.
     B:vanillaParticleConfig.enabled=true
-
-    # Set this to false to disable checking and alerting when new Botania versions come out. (keywords for noobs: update notification message)
     B:versionChecking.enabled=true
 
     # Set this to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old Botania versions. Warning: Disabled by default because it may be laggy.
@@ -144,6 +153,14 @@ general {
 
     # The density of each Botania flower patch generated, defaults to 2, the lower the number, the less each patch will have.
     I:worldgen.flower.density=2
+
+    # Blacklist of which dimension generates Botania flowers.
+    I:worldgen.flower.dimensionBlacklist <
+     >
+
+    # Whitelist of which dimension generates Botania flowers. Empty means any dimension can.
+    I:worldgen.flower.dimensionWhitelist <
+     >
 
     # The inverse chance for a Botania flower patch to be generated, defaults to 16. The higher this value is the less patches will exist and the more flower each will have.
     I:worldgen.flower.patchChance=16
@@ -156,6 +173,14 @@ general {
 
     # The chance for a Botania flower generated in a patch to be a tall flower. 0.1 is 10%, 1 is 100%. Defaults to 0.05
     D:worldgen.flower.tallChance=0.05
+
+    # Blacklist of which dimension generates Botania mushrooms.
+    I:worldgen.mushroom.dimensionBlacklist <
+     >
+
+    # Whitelist of which dimension generates Botania mushrooms. Empty means any dimension can.
+    I:worldgen.mushroom.dimensionWhitelist <
+     >
 
     # The quantity of Botania mushrooms to generate underground, in the world, defaults to 40, the lower the number the less patches generate.
     I:worldgen.mushroom.quantity=40
