--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -26,13 +26,19 @@ inventory
 	#Creative or JEI style tabs
 	creative_tab_style=false
 	disableMouseScrollTransfer=false
+	#Pressing the open inventory key when the inventory was just opened when the search is focused will close it instead of typing in the search
+	firstInvCloseClosesInSearch=true
 	gamemodes=creative, creative+, adventure
 	hidden=false
 	#Ignore overlap with potion effect HUD
 	ignore_potion_overlap=false
 	invertMouseScrollTransfer=false
 	itemIDs=1
+	#Item presence overlay on ?-hover
+	itemPresenceOverlay=1
 	itemsort=nei.itemsort.minecraft,nei.itemsort.mod,nei.itemsort.id,nei.itemsort.default,nei.itemsort.damage,nei.itemsort.name
+	#JEI styled cycled ingredients
+	jei_style_cycled_ingredients=true
 	#Enable/disable JEI Style item presence overlay on ?-hover
 	jei_style_item_presence_overlay=true
 	#Enable/disable JEI Style Recipe Catalysts
@@ -47,11 +53,17 @@ inventory
 	optimize_gui_overlap_computation=false
 	oredict=false
 	profileRecipes=false
+	#Show recipe tooltips in Bookmarks
+	recipeTooltipsMode=1
 	searchmode=1
+	#Require holding shift to move items when overlaying recipe
+	shift_overlay_recipe=true
 	#Show Item Quantity Widget
 	showItemQuantityWidget=true
 	#Show Recipe Marker
 	showRecipeMarker=false
+	#Highlight Present Item
+	slotHighlightPresent=true
 	#Use NBT in Bookmarks
 	useNBTInBookmarks=true
 	utilities=delete, magnet
@@ -60,6 +72,39 @@ inventory
 	worldSpecificBookmarks=false
 	#Global or world specific presets
 	worldSpecificPresets=false
+	
+	history
+	{
+		#Enable/disable History Panel
+		enabled=true
+		#Color of the history area display
+		historyColor=0xee555555
+		splittingMode=1
+		#Rows used in historical areas
+		useRows=2
+	}
+	
+	search
+	{
+		#Search mode for identifier (prefix: &)
+		identifierSearchMode=1
+		#Search mode for Mod Names (prefix: @)
+		modNameSearchMode=1
+		#Search mode for Tag Names (prefix: $)
+		oreDictSearchMode=1
+		#Search Mode
+		patternMode=1
+		#Quote Drop Item Name
+		quoteDropItemName=true
+		#Search mode for Item Subsets (prefix: %)
+		subsetsSearchMode=1
+		#Search mode for Tooltips (prefix: #)
+		tooltipSearchMode=1
+		#Focus Search Widget on Open, blurs/unfocuses on mouse move unless typing has started first
+		widgetAutofocus=false
+		#Widget Position
+		widgetPosition=true
+	}
 }
 
 keys
@@ -67,9 +112,13 @@ keys
 	gui.back=14
 	gui.bookmark=30
 	gui.bookmark_count=33554462
+	gui.bookmark_pull_items=47
+	gui.bookmark_pull_items_ingredients=67108911
 	gui.bookmark_recipe=67108894
 	gui.bookmark_recipe_count=100663326
 	gui.botania_corporea_request=46
+	gui.copy_name=33554478
+	gui.copy_oredict=33554464
 	gui.enchant=45
 	gui.getnextsearch=208
 	gui.getprevioussearch=200
@@ -78,6 +127,7 @@ keys
 	gui.next=209
 	gui.next_machine=208
 	gui.next_recipe=205
+	gui.next_tooltip=44
 	gui.overlay=31
 	gui.overlay_hide=33554463
 	gui.overlay_use=67108895
