--- a/config/bugtorch/base.cfg
+++ b/config/bugtorch/base.cfg
@@ -10,8 +10,6 @@
 "bug fixes" {
     # Assigns the correct sound types to some blocks. [default: true]
     B:fixBlockSounds=true
-
-    # Carpet blocks will no longer randomly tick. [default: true]
     B:fixCarpetBlocksRandomlyTicking=true
 
     # Jack O' Lantern blocks will no longer randomly tick. [default: true]
@@ -24,19 +22,19 @@
     # From MC 1.14, fixes MC-88097 [default: true]
     B:fixSnowBlocksRandomlyTicking=true
 
+    # Squids will make sounds (requires TX Loader) [default: true]
+    B:fixSquidsSounds=true
+
     # Torch blocks will no longer randomly tick. [default: true]
     B:fixTorchBlocksRandomlyTicking=true
 }
 
 
 tweaks {
-    # Show (1), disable(0), or remove(-1) the Broadcast Settings button in the options menu. [range: -1 ~ 1, default: 1]
+    # Remove the Broadcast Settings button from the options menu. [default: false]
+    B:removeBroadcastSettingsButton=false
     I:showBroadcastSettingsButton=1
-
-    # Show (1), disable(0), or remove(-1) the Open to LAN button in the escape menu. [range: -1 ~ 1, default: 1]
     I:showOpenToLanButton=1
-
-    # Show (1), disable(0), or remove(-1) the Super Secret Settings button in the options menu. [range: -1 ~ 1, default: 1]
     I:showSuperSecretSettingsButton=1
 }
 
