--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -30,6 +30,13 @@ inventory
 	firstInvCloseClosesInSearch=true
 	gamemodes=creative, creative+, adventure
 	hidden=false
+	#Enable/disable History Panel
+	history.enabled=true
+	#Color of the history area display
+	history.historyColor=0xee555555
+	history.splittingMode=1
+	#Rows used in historical areas
+	history.useRows=2
 	#Ignore overlap with potion effect HUD
 	ignore_potion_overlap=false
 	invertMouseScrollTransfer=false
@@ -55,6 +62,24 @@ inventory
 	profileRecipes=false
 	#Show recipe tooltips in Bookmarks
 	recipeTooltipsMode=1
+	#Search mode for identifier (prefix: &)
+	search.identifierSearchMode=1
+	#Search mode for Mod Names (prefix: @)
+	search.modNameSearchMode=1
+	#Search mode for Tag Names (prefix: $)
+	search.oreDictSearchMode=1
+	#Search Mode
+	search.patternMode=1
+	#Quote Drop Item Name
+	search.quoteDropItemName=true
+	#Search mode for Item Subsets (prefix: %)
+	search.subsetsSearchMode=1
+	#Search mode for Tooltips (prefix: #)
+	search.tooltipSearchMode=1
+	#Focus Search Widget on Open, blurs/unfocuses on mouse move unless typing has started first
+	search.widgetAutofocus=false
+	#Widget Position
+	search.widgetPosition=true
 	searchmode=1
 	#Require holding shift to move items when overlaying recipe
 	shift_overlay_recipe=true
@@ -72,39 +97,6 @@ inventory
 	worldSpecificBookmarks=false
 	#Global or world specific presets
 	worldSpecificPresets=false
-	
-	history
-	{
-		#Enable/disable History Panel
-		enabled=true
-		#Color of the history area display
-		historyColor=0xee555555
-		splittingMode=1
-		#Rows used in historical areas
-		useRows=2
-	}
-	
-	search
-	{
-		#Search mode for identifier (prefix: &)
-		identifierSearchMode=1
-		#Search mode for Mod Names (prefix: @)
-		modNameSearchMode=1
-		#Search mode for Tag Names (prefix: $)
-		oreDictSearchMode=1
-		#Search Mode
-		patternMode=1
-		#Quote Drop Item Name
-		quoteDropItemName=true
-		#Search mode for Item Subsets (prefix: %)
-		subsetsSearchMode=1
-		#Search mode for Tooltips (prefix: #)
-		tooltipSearchMode=1
-		#Focus Search Widget on Open, blurs/unfocuses on mouse move unless typing has started first
-		widgetAutofocus=false
-		#Widget Position
-		widgetPosition=true
-	}
 }
 
 keys
