--- a/config/etfuturum/blocksitems.cfg
+++ b/config/etfuturum/blocksitems.cfg
@@ -34,7 +34,7 @@
 
     # If true, old boats will be replaced with the new oak boat and the item sprite will also be changned. False means the new and old boat and item for it exists separately, and the new boats will use a wooden shovel in their crafting recipe. If this is enabled, a boat that has an entity in it will not be replaced until the entity gets out.
     # THIS WILL NOT WORK PROPERLY WITH BETTER BOATS INSTALLED [default: true]
-    B:replaceOldBoats=true
+    B:replaceOldBoats=false
 }
 
 
@@ -304,7 +304,7 @@ equipment {
     B:enableBeetroot=true
 
     #  [default: true]
-    B:enableIronNugget=true
+    B:enableIronNugget=false
 
     #  [default: true]
     B:enableLingeringPotions=true
@@ -397,7 +397,7 @@ equipment {
     B:enableMud=true
 
     #  [default: true]
-    B:enableNetherGold=true
+    B:enableNetherGold=false
 
     #  [default: true]
     B:enableNetherite=true
@@ -418,7 +418,7 @@ equipment {
     B:enableSoulSoil=true
 
     # Enable Granite/Andesite/Diorite [default: true]
-    B:enableStones=true
+    B:enableStones=false
 
     #  [default: true]
     B:enableSweetBerryBushes=true
