--- a/config/etfuturum/modcompat.cfg
+++ b/config/etfuturum/modcompat.cfg
@@ -26,7 +26,7 @@ misc {
      >
 
     # Raw ores for modded metals. Adds a set of "general" raw ores for common metals like "oreAluminium", "oreTin", etc. [default: true]
-    B:moddedRawOres=false
+    B:moddedRawOres=true
 
     # List of modded raw ores to disable. Add a ModID or ore dictionary tag. For example adding "oreTin" disables modded raw tin, and adding "SimpleOres" would disable raw adamantium ore. CaSe-SeNsItIvE!
     # Each entry is separated by a new line. This only disables raw ores added from Et Futurum's end and will not affect raw ores from other mods. [default: ]
