--- a/config/HardcoreDarkness.cfg
+++ b/config/HardcoreDarkness.cfg
@@ -5,7 +5,7 @@ settings {
     B:"Dark End"=false
 
     # Whether the Nether is also supposed to have its minimum light removed [default: true]
-    B:"Dark Nether"=true
+    B:"Dark Nether"=false
 
     # Whether it should be dark in the Twilight Forest [default: false]
     B:"Dark Twilight Forest"=false
@@ -15,7 +15,7 @@ settings {
     S:"Dimension Blacklist"=
 
     # 0: No minimum sky & block light, 1: No minimum block light, 2: Skylight is dependent on moon phase
-    I:Mode=0
+    I:Mode=2
 
     # Attempts to remove the blue sky light that occurs when using mode 1 or 2 [default: true]
     B:RemoveBlue=true
