reactivate archaicfix featues

--- a/config/archaicfix.cfg
+++ b/config/archaicfix.cfg
@@ -40,11 +40,11 @@ general {
 
     # Prevents buttons from showing a yellow text color when hovered, as was done in 1.14+. [default: false]
     B:enableNewButtonAppearance=false
-    B:enableOcclusionTweaks=false
+    B:enableOcclusionTweaks=true
 
     # When true, the Phosphor backport is enabled. Disabling is not recommended as it will generally add lag. [default: true]
     B:enablePhosphor=true
-    B:enableThreadedChunkUpdates=false
+    B:enableThreadedChunkUpdates=true
 
     # Fix vanilla issues with entities spawned as part of structures not being marked persistent (e.g. MC-108664) [default: true]
     B:fixEntityStructurePersistence=true
@@ -65,7 +65,7 @@ general {
     B:fixSkinMemoryLeak=false
 
     # Fix TileEntity unloading being laggy. [default: true]
-    B:fixTEUnloadLag=false
+    B:fixTEUnloadLag=true
 
     # Fix the 'TickNextTick list out of synch' error. [default: true]
     B:fixTickListSynchronization=true
