adjust immersive cavegen

--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -283,9 +283,9 @@ reduction {
     # Biomes that the 'second Y level' will apply to. Replace one or more of the 'Deep Ocean's with another biome to use. [default: [Deep Ocean], [Deep Ocean], [Deep Ocean], [Deep Ocean], [Deep Ocean], [Deep Ocean], [Deep Ocean]]
     S:"Biomes Second Y Level Affects" <
         Deep Ocean
-        Deep Ocean
-        Deep Ocean
-        Deep Ocean
+        Ocean
+        FrozenOcean
+        Ocean Oil Field
         Deep Ocean
         Deep Ocean
         Deep Ocean
@@ -316,7 +316,7 @@ reduction {
     B:"Disable Water Source Block Gen"=false
 
     # Surprise! (Only keep reading if you hate surprises)(Randomly (but rarely) applies blindness below y=35 and plays a sound). [default: true]
-    B:Effects=true
+    B:Effects=false
 
     # Makes mineshafts spawn less chaotically and in better mineshaft systems. [default: true]
     B:"Enable Better Mineshafts"=true
@@ -406,7 +406,7 @@ reduction {
     B:"Water Flooded Caves"=true
 
     # Allows to control water lake frequencies. The less the number, the more frequently they spawn, so 1 = they spawn more oftenly, 10000 = close to never. [range: 1 ~ 100000, default: 12]
-    I:"Water Lakes Chance"=12
+    I:"Water Lakes Chance"=10
 }
 
 
