--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -757,7 +757,7 @@ items {
     B:Makemake=true
 
     # Setting this option to false will remove Mercury & all the related items/block/tools/armour/space stations!
-    B:Mercury=true
+    B:Mercury=false
 
     # Setting this option to false will remove Oberon & all the related items/block/tools/armour/space stations!
     B:Oberon=true
