--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -75,37 +75,37 @@
 
 "cave generation modifiers" {
     # Value from -5 to 12, modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Cave Branch Point Width Modifier"=0
+    I:"Cave Branch Point Width Modifier"=2
 
     # Value from -3 to 50, manually modifies the cave length in a cave cluster. Doesn't work with Old Cave Gen option. [range: -50 ~ 100, default: 0]
-    I:"Cave Length in Cluster Modifier"=0
+    I:"Cave Length in Cluster Modifier"=1
 
     # Value from -3 to 12, manually modifies the amount of caves in a cave cluster. Doesn't work with Old Cave Gen option. [range: -12 ~ 50, default: 0]
     I:"Caves in Cluster Modifier"=0
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Circular Cave Room Width Modifier"=0
+    I:"Circular Cave Room Width Modifier"=2
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Colossal Cave Width Modifier"=0
+    I:"Colossal Cave Width Modifier"=2
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Directional Cave Width Modifier"=0
+    I:"Directional Cave Width Modifier"=2
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Maze Cave Width Modifier"=0
+    I:"Maze Cave Width Modifier"=2
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Normal Cave Width Modifier"=0
+    I:"Normal Cave Width Modifier"=2
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Ravine Cave Width Modifier"=0
+    I:"Ravine Cave Width Modifier"=2
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Regional Cave Width Modifier"=0
+    I:"Regional Cave Width Modifier"=2
 
     # Value from -5 to 12, manually modifies the width of a specific type of caves. Doesn't work with Old Cave Gen option. [range: -12 ~ 12, default: 0]
-    I:"Vertical Cave Width Modifier"=0
+    I:"Vertical Cave Width Modifier"=2
 }
 
 
@@ -189,7 +189,7 @@ entities {
     I:"Max Cave Length in Cluster"=1000
 
     # Allows to set max amount of caves in a cave cluster. Doesn't work with Old Cave Gen option. [range: 0 ~ 1000, default: 1000]
-    I:"Max Caves in Cluster"=1000
+    I:"Max Caves in Cluster"=800
 
     # Allows to set max width of a specific type of cave. Doesn't work with Old Cave Gen option. [range: 0 ~ 1000, default: 1000]
     I:"Maze Cave Max Width"=1000
@@ -263,19 +263,19 @@ reduction {
      >
 
     # Allows to make maze caves even less common. [range: 0 ~ 100, default: 0]
-    I:"Maze Cave Reduction Percentage"=0
+    I:"Maze Cave Reduction Percentage"=27
 
     # Allows to make normal caves even less common. [range: 0 ~ 100, default: 0]
-    I:"Normal Cave Reduction Percentage"=0
+    I:"Normal Cave Reduction Percentage"=67
 
     # Allows to make normal ravine caves even less common. Note: Ravine caves are different from ravines/caverns! They're not the same thing! [range: 0 ~ 100, default: 0]
-    I:"Ravine Cave Reduction Percentage"=0
+    I:"Ravine Cave Reduction Percentage"=61
 
     # Allows to make regional caves even less common. [range: 0 ~ 100, default: 0]
-    I:"Regional Cave Reduction Percentage"=0
+    I:"Regional Cave Reduction Percentage"=27
 
     # Allows to make normal vertical even less common. [range: 0 ~ 100, default: 0]
-    I:"Vertical Cave Reduction Percentage"=0
+    I:"Vertical Cave Reduction Percentage"=27
 }
 
 
@@ -346,13 +346,13 @@ reduction {
     B:"Enable Village Spawn"=true
 
     # Disables liquid source block and lake spawn changes and toggles for stucture spawns, for better mod compatibility. If something conflicts with another mod, the first thing you should try disabling is this. The second is 'Separate Flooded Y Level'. [default: true]
-    B:"Enable World Population Changes"=false
+    B:"Enable World Population Changes"=true
 
     # Makes the world underground a HUGE cavern system. A bit extreme, not many will like it, but the option is there. (Note: Does not work with Old Cave Gen option) [default: false]
     B:"Exteme Cave Gen"=true
 
     # Note: This will only affect caves that *can* be big. There are going to be some small caves even if you turn this to 100. Note 2: This is NOT percentages. 100 does not mean caves have 100% chance to be big, it simply means they're 100 'x' more likely to be big. [range: 0 ~ 100, default: 0]
-    I:"Extra Mega Cave Chance"=10
+    I:"Extra Mega Cave Chance"=8
 
     # 1 - Lava, 2 - Water. NOTE: As many things, doesn't support old cave gen option. [range: 1 ~ 2, default: 1]
     I:"Filled Caves Spawn Mechanism"=1
