disable immersive cavegen mobs as they randomly spawn in ocean
in masse aswell

--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -138,7 +138,7 @@ entities {
     I:"Brown Spider ID"=-1
 
     # An option to disable the mod's mobs as a whole. [default: true]
-    B:"Enable Mobs"=true
+    B:"Enable Mobs"=false
 
     # -1 is random free ID. Set to something else if you want a fixed entity ID. [range: -1 ~ 1000000, default: -1]
     I:"Glowslime ID"=-1
