fix dim id conflict

--- a/config/ExtraPlanets.cfg
+++ b/config/ExtraPlanets.cfg
@@ -475,7 +475,7 @@ dimensionid {
     I:"Mars SpaceStation Static Dimension ID"=-66
 
     # [range: -2147483647 ~ 2147483647, default: -13]
-    I:"Mercury Dimension ID"=-103
+    I:"Mercury Dimension ID"=-13
 
     # [range: -2147483647 ~ 2147483647, default: -61]
     I:"Mercury SpaceStation Dimension ID"=-61
@@ -757,7 +757,7 @@ items {
     B:Makemake=true
 
     # Setting this option to false will remove Mercury & all the related items/block/tools/armour/space stations!
-    B:Mercury=false
+    B:Mercury=true
 
     # Setting this option to false will remove Oberon & all the related items/block/tools/armour/space stations!
     B:Oberon=true
