--- a/config/etfuturum/blocksitems.cfg
+++ b/config/etfuturum/blocksitems.cfg
@@ -310,7 +310,7 @@ equipment {
     B:enableLingeringPotions=true
 
     #  [default: true]
-    B:enableMutton=true
+    B:enableMutton=false
 
     #  [default: true]
     B:enableNewDyes=true
