disable thin panes

--- a/config/etfuturum/mixins.cfg
+++ b/config/etfuturum/mixins.cfg
@@ -126,7 +126,7 @@
     # Panes [Iron Bars, Glass Panes, etc] are changed to a single post if they are not connected to any other blocks
     # Modified Classes: net.minecraft.block.BlockPane
     # Modified Client Classes: net.minecraft.client.renderer.RenderBlocks [default: true]
-    B:thinPanes=true
+    B:thinPanes=false
 }
 
 
