--- a/config/VillageNames4/general.cfg
+++ b/config/VillageNames4/general.cfg
@@ -80,7 +80,7 @@ miscellaneous {
     B:"Pyramid Terracotta"=true
 
     # Displays a client-side chat message on login if there's an update available. [default: true]
-    B:"Version Checker"=true
+    B:"Version Checker"=false
 }
 
 
