disable immersive cavegen spiders

--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -325,7 +325,7 @@ reduction {
     B:"Enable Better Sand Generation"=true
 
     # Gives option to disable cave spider spawners in mineshafts from spawning. [default: true]
-    B:"Enable Cave Spider Spawner Spawn"=true
+    B:"Enable Cave Spider Spawner Spawn"=false
 
     # Replaces the vanilla caverns with custom. [default: true]
     B:"Enable Caverns Replacer"=true
