use botania prismarine

--- a/config/etfuturum/blocksitems.cfg
+++ b/config/etfuturum/blocksitems.cfg
@@ -406,7 +406,7 @@ equipment {
     B:enableNetherwartBlock=true
 
     #  [default: true]
-    B:enablePrismarine=true
+    B:enablePrismarine=false
 
     #  [default: true]
     B:enableRedSandstone=true
