allow igloos on modded biomes

--- a/config/VillageNames4/general.cfg
+++ b/config/VillageNames4/general.cfg
@@ -65,7 +65,7 @@ miscellaneous {
     B:"Add Sponges"=true
 
     # Igloos can generate in mods' snowy plains biomes, rather than just vanilla's Ice Plains and Cold Taiga [default: false]
-    B:"Allow Igloos in modded biomes"=false
+    B:"Allow Igloos in modded biomes"=true
 
     # Set this to false to deacactivate the in-game config GUI, in case it conflicts with other mods. [default: true]
     B:"Allow in-game config access"=true
