update mekanism configs

--- a/config/mekanism/MekanismCE.cfg
+++ b/config/mekanism/MekanismCE.cfg
@@ -1,14 +1,23 @@
 # Configuration file
 
 mekce {
+    B:AccurateHeavyWater=false
+    I:AccurateHeavyWaterGen=5
+
     # Select range from 1 to 64, we do not recommend going over 32
     I:DigitalMinerMaxRadius=64
 
     # when true and biome's o plenty is installed atomic alloy is made by using ender instead of obsidian
     B:EnableBoPProgression=false
 
+    # adds deepslate osmium ore entry to efr if et futurum requiem is present
+    B:EnableDeepslateOsmiumOreInEFR=true
+
     # Allows oredict'ed diamonds to be used in the enrichment chamber, like synthetic diamonds.
     B:EnableDiamondCompat=true
+
+    # disables completely the oregen
+    B:EnableOreGen=true
 
     # Allows poor ores from railcraft to be used in the purification chamber and gives one clump ie one ingot.
     B:EnablePoorOresCompat=true
@@ -30,6 +39,15 @@ mekce {
 
     # Replaces Mekanism Osmium to Platinum
     B:PlatReplacement=false
+
+    # Energy cost of attacking entities with the Atomic Disassembler. Default is 2000
+    I:atomicDisassemblerAttackPowerCost=2000
+
+    # Attack Damage of a powered Atomic Disassembler. Default is 20
+    I:atomicDisassemblerPoweredDamage=20
+
+    # Attack Damage of an unpowered Atomic Disassembler. Default is 4
+    I:atomicDisassemblerUnpoweredDamage=4
 
     # This allows opening Personal Chests from your inventory without having to place them
     B:enablePersonalChestPocketAccess=true
