--- a/config/mekanism/MekanismRecipes.cfg
+++ b/config/mekanism/MekanismRecipes.cfg
@@ -97,6 +97,10 @@ recipes {
     B:enablePressurizedReactorChamber=true
     B:enablePressurizedTubes=true
     B:enablePurificationChamber=true
+    B:enableRawOsmiumBlock=true
+
+    # Adds oredict oreOsmium on Raw osmium
+    B:enableRawOsmiumOreDictOreOsmium=true
     B:enableRefinedObsidianBlock=true
     B:enableResistiveHeater=true
     B:enableRobit=true
