disable mekanisms combiner

--- a/config/mekanism/MekanismRecipes.cfg
+++ b/config/mekanism/MekanismRecipes.cfg
@@ -41,7 +41,7 @@ recipes {
     B:enableChemicalOxidiser=true
     B:enableChemicalWasher=true
     B:enableCircuits=true
-    B:enableCombiner=true
+    B:enableCombiner=false
     B:enableConfigurationCard=true
     B:enableConfigurator=true
     B:enableCopperBlock=true
