--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -107,7 +107,7 @@ general {
     B:"Whitelist CoFHCore worldgen to generate its ores and lakes on planets"=false
 
     # If ThaumCraft is installed, ThaumCraft wild nodes can generate on the Moon and planets.
-    B:"Generate ThaumCraft wild nodes on planetary surfaces"=true
+    B:"Generate ThaumCraft wild nodes on planetary surfaces"=false
 
     # Enter IDs of other mods' ores here for Galacticraft to generate them on the Moon and other planets. Format is BlockName or BlockName:metadata. Use optional parameters at end of each line: /RARE /UNCOMMON or /COMMON for rarity in a chunk; /DEEP /SHALLOW or /BOTH for height; /SINGLE /STANDARD or /LARGE for clump size; /XTRARANDOM for ores sometimes there sometimes not at all.  /ONLYMOON or /ONLYMARS if wanted on one planet only.  If nothing specified, defaults are /COMMON, /BOTH and /STANDARD.  Repeat lines to generate a huge quantity of ores.
     S:"Other mods ores for GC to generate on the Moon and planets" <
@@ -175,7 +175,7 @@ general {
     I:"Adventure Game Mode Flags"=15
 
     # If this is enabled, areas sealed by Oxygen Sealers will run a seal check when the player breaks or places a block (or on block updates).  This should be enabled for a 100% accurate sealed status, but can be disabled on servers for performance reasons.
-    B:"Enable Sealed edge checks"=true
+    B:"Enable Sealed edge checks"=false
 
     # Enable this if the standard canister recipe causes a conflict.
     B:"Alternate recipe for canisters"=false
